--- a/app/src/main/res/layout/fragment_foto.xml
+++ b/app/src/main/res/layout/fragment_foto.xml
@@ -1,18 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.digitalhouse.entregable.FotoFragment">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.example.digitalhouse.entregable.FotoFragment">
 
     <TextView
+        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:id="@+id/fragment_foto_txt_nombre"/>
+        android:id="@+id/fragment_foto_txt_nombre"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="297dp"
+        android:layout_height="284dp"
+        app:srcCompat="@drawable/astridygaston"
         android:id="@+id/fragment_foto_img"
-        android:layout_below="@+id/fragment_foto_txt_nombre"/>
-</RelativeLayout>
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_foto_txt_nombre"/>
+
+</android.support.constraint.ConstraintLayout>
